[package]
name = "echomap"
version = "0.5.3"
authors = ["Pat Sier <pjsier@gmail.com>"]
description = "A command line tool for previewing map files in the terminal"
readme = "README.md"
homepage = "https://github.com/pjsier/echomap"
repository = "https://github.com/pjsier/echomap"
license = "MIT"
edition = "2018"
keywords = ["geo", "map", "gis", "cli"]
exclude = [".github/*", "img/*", "fixtures/*"]

[dependencies]
geo = "0.14"
geo-types = { version = "0.6", features = ["rstar"] }
geojson = { version = "0.20", features = ["geo-types"] }
num-traits = "0.2"
rstar = "0.8"
anyhow = "1.0"
console = "0.12.0"
indicatif = "0.15.0"
clap = "2.33.3"
csv = "1.1"
shapefile = { version = "0.2.1", features = ["geo-types"] }
topojson = "0.3"
float-cmp = "0.8.0"
wkt = "0.8.0"
polyline = "0.8.0"

[[bin]]
name = "echomap"
path = "src/main.rs"
