[package]
name = "echomap"
version = "0.7.3"
authors = ["Pat Sier <pjsier@gmail.com>"]
description = "A command line tool for previewing map files in the terminal"
readme = "README.md"
homepage = "https://github.com/pjsier/echomap"
repository = "https://github.com/pjsier/echomap"
license = "MIT"
edition = "2021"
keywords = ["geo", "map", "gis", "cli"]
exclude = [".github/*", "img/*", "fixtures/*"]

[dependencies]
geo = "0.24.1"
geo-types = { version = "0.7.9", features = ["rstar"] }
geojson = { version = "0.23.0", features = ["geo-types"] }
num-traits = "0.2"
rstar = "0.10.0"
anyhow = "1.0"
console = "0.15.5"
indicatif = "0.17.3"
clap = "4.0.22"
csv = "1.1"
shapefile = { version = "0.3.0", features = ["geo-types"] }
topojson = "0.5.1"
float-cmp = "0.9"
wkt = "0.10.3"
polyline = "0.10.0"
kml = "0.8.0"

[[bin]]
name = "echomap"
path = "src/main.rs"
